Update registerphar.html 1

--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -9,7 +9,7 @@
 <div class="card">
     <div class="text-center mb-4">
     <h4>Store Registration</h4>
-    <p class="text-muted">Fill in the details below to register your pharmacy.</p>
+    <p class="text-muted">Fill in the details below to register your store.</p>
 </div>
             <div class="card-body">
               <!-- Logo -->
