--- a/application/templates/store/approved_orders.html
+++ b/application/templates/store/approved_orders.html
@@ -33,7 +33,7 @@
                         
                        {{order.location}}
                       
-                          <button class="btn" onclick="window.location.href='{{url_for('store.userorders', order_id=order.id)}}'">
+                          <button class="btn bg-success " onclick="window.location.href='{{url_for('store.userorders', order_id=order.id)}}'">
                               View Details
                           </button>
                    </div>
