--- a/application/templates/store/updated_addProduct.html
+++ b/application/templates/store/updated_addProduct.html
@@ -27,7 +27,7 @@
             {{ form.product_pictures(class="form-control") }}
         </div>
         <!-- Submit Button -->
-        <button type="submit" class="btn btn-outline-primary rounded-pill">Add Product</button>
+        <button type="submit" class="btn btn-outline-success bg-success rounded-pill">Add Product</button>
     </form>
     <!-- Back to Products Page -->
 </div>
