--- a/application/templates/customer/updated_cartlist.html
+++ b/application/templates/customer/updated_cartlist.html
@@ -29,7 +29,7 @@
             <td>{{items.quantity}}</td>
             <td>
             <button onclick="window.location.href='{{ url_for('main.remove_from_cart',item_id=items.id)}}'"
-                        class="btn btn-outline-primary rounded-pill"><i class="fas fa-trash"></i></button>
+                        class="btn btn-outline-secondary rounded-pill"><i class="fas fa-trash"></i></button>
             </td>
             </tbody>
             {%endfor%}
@@ -57,13 +57,15 @@
         </div>
         <br>
         <div class="form-group">
-            {{form3.deliverymethod.label}}
-            <br/>
-            {%for subfield in form3.deliverymethod%}
-            {{subfield}}
-            {{subfield.label}}<br>
-            {%endfor%}
+            {{ form3.deliverymethod.label }}
+            {% for subfield in form3.deliverymethod %}
+                <div class="form-check">
+                    {{ subfield(class="form-check-input") }}
+                    {{ subfield.label(class="form-check-label") }}
+                </div>
+            {% endfor %}
         </div>
+
         <br>
         <div class="form-group">
             {{form3.drop_address.label}}
@@ -77,7 +79,7 @@
         <br>
     <div class="button-container" style="align-items:center;">
         <!-- Shop Button -->
-        <button type="submit" class= 'btn btn-outline-primary rounded-pill'
+        <button type="submit" class= 'btn btn-outline-success rounded-pill'
             onclick="window.location.href='{{ url_for('main.addorder', total_amount=total_amount)}}'">Add Order
         </button>
     </div>
